# secret-diary

./: README.md  pyproject.toml
src/secret_diary/: cli.py  crypto.py  store.py
