[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secret-diary"
version = "0.1.0"
description = "Offline-first encrypted notebook."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "You" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "cryptography>=41.0.0",
]

[project.scripts]
secret-diary = "secret_diary.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/secret_diary"]
